--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="./styles/main.css" />
 
     <!-- ion-icons -->
-    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-    
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"
+    ></script>
+
     <!-- fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Dosis:200|Teko&display=swap"
@@ -126,7 +129,7 @@
             data-sal-duration="800"
             data-sal-easing="ease-in-out"
           >
-            Lorem ipsum dolor sit amet, consectetur adipisicing.
+            Making the best wines ever, since 1892.
           </h3>
           <p
             data-sal="slide-up"
@@ -135,10 +138,9 @@
             data-sal-easing="ease-in-out"
             class="text"
           >
-            Lorem, ipsum dolor sit amet consectetur adipisicing Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Veritatis, deserunt! Ipsam,
-            molestiae.elit. Illo optio commodi omnis quaerat, nesciunt odio.
+            Our wine farms have been making the best wine for hundreds of years
+            to make your night more refreshing and intense. We like that our
+            customers are always satisfied.
           </p>
 
           <a
@@ -191,8 +193,8 @@
               </div>
 
               <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Commodi.
+                We're recyclable and good with the environment. We use reusable
+                plastic for the packaging of our wines.
               </div>
             </div>
             <div
@@ -207,8 +209,8 @@
               </div>
 
               <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Commodi.
+                We always leave our mark. We make each our wines originals and
+                full of history.
               </div>
             </div>
             <div
@@ -223,8 +225,8 @@
               </div>
 
               <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Commodi.
+                We always make our wines with the best possible quality, so you
+                have a drink full of emotions.
               </div>
             </div>
             <div
@@ -239,8 +241,8 @@
               </div>
 
               <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Commodi.
+                We are recognized worldwide for our way of making our wines,
+                always thinking about the emotion of the client.
               </div>
             </div>
           </div>
@@ -357,7 +359,7 @@
             data-sal-duration="800"
             data-sal-easing="ease-in-out"
           >
-            Lorem ipsum dolor sit amet.
+            Say Hello!
           </h3>
           <p
             data-sal="slide-up"
@@ -366,11 +368,8 @@
             data-sal-easing="ease-in-out"
             class="text"
           >
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-            corporis eos sint deleniti architecto laborum! Lorem ipsum dolor sit
-            amet consectetur, adipisicing elit. Nihil ab nulla fuga temporibus
-            unde, aliquam iusto odit velit error repellat animi consequatur
-            alias, adipisci possimus expedita tempore et nemo nobis.
+            We'll try to answer you as quickly as possible, you can leave any
+            doubt that you have about our products, brands or team.
           </p>
 
           <form method="POST" class="form">
@@ -430,8 +429,8 @@
         class="address"
       >
         <h4 class="lead">Address</h4>
-        <p class="text">Parc De Prince</p>
-        <p class="text">France, 170700</p>
+        <p class="text">Westminster</p>
+        <p class="text">London, UK - 170057</p>
       </div>
 
       <div
