--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./styles/main.css" />
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/halek-logo.png" type="image/x-icon">
+
     <!-- ion-icons -->
     <script
       type="module"
